--- a/homework1.tex
+++ b/homework1.tex
@@ -9,6 +9,31 @@
 
 \section{功能性需求}
 
-在 1974年， Parnas
+在 1974年， Parnas 提出了如下问题：
+\begin{itemize}
+    \item 接受一行有序的输入
+    \item 一行输入由若干词汇组成
+    \item 每个单词用若干字母组成
+    \item 任何一行可以进行循环移位：将行首单词移至行尾
+    \item KWIC 索引系统输出一个按字母顺序排列的循环移位的全排列
+\end{itemize}
+
+\section{非功能性需求}
+
+\subsection{可修改性}
+\begin{itemize}
+    \item 算法的更改
+    \item 数据表现方式改变
+    \item 系统功能扩展
+\end{itemize}
+
+\subsection{性能}
+\begin{itemize}
+    \item 时间空间复杂度
+\end{itemize}
+\subsection{重用性}
+\begin{itemize}
+    \item 系统的部分组成内容（服务）是可重用组件
+\end{itemize}
 
 \end{document}
